deployments/workloads/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-deployment
  labels:
    app: qbittorrent
    vpn: "true"
spec:
  replicas: 0
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
            - containerPort: 6881
          volumeMounts:
            - name: nfs-media
              mountPath: /downloads
              subPath: downloads/
            - name: nfs-configs
              mountPath: /config
              subPath: qbittorrent/
          resources:
            limits:
              memory: "2000Mi"
              cpu: "2000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
      volumes:
        - name: nfs-media
          nfs:
            server: 10.10.10.146
            path: /mnt/bigdata/kubernetes/media/data
            readOnly: false
        - name: nfs-configs
          nfs:
            server: 10.10.10.146
            path: /mnt/bigdata/kubernetes/media/configs
            readOnly: false
